# xp

./: .envrc  README.md  example.py  pyproject.toml
src/xp/: __init__.py  launch_xps.py  local_mp.py  setup-compute-node.sh  slurm_script.sbatch  tools.py  uplink.py
tests/: test_all.py
